Fixed images alignment

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -38,6 +38,10 @@
   position: relative;
 }
 
+.section__media {
+  text-align: center;
+}
+
 .section__actions {
   a {
     &:not(.btn) {
